<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="add_word">Add word</string>
    <string name="add_word_badchar">Cannot add word with unmappable symbol for %1$s.</string>
    <string name="add_word_blank">Blank word not added.</string>
    <string name="add_word_exist1">Word (%1$s) already in DB.</string>
    <string name="add_word_exist2">Word (%1$s) already in DB for %2$s.</string>
    <string name="app_name">Traditional T9</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="database_notready">Database unavailable.</string>
    <string name="hello_world">Hello world!</string>
    <string name="help_url">https://github.com/Clam-/TraditionalT9/wiki/Traditional-T9-keypad-IME-for-Android</string>
    <string name="ime_english">English</string>
    <string name="ime_name">Traditional T9</string>
    <string name="ime_number">Numbers</string>
    <string name="main_left_addword">Add word</string>
    <string name="main_left_insert">Insert symbol</string>
    <string name="main_left_notfound">Add word?</string>
    <string name="main_mid">Done</string>
    <string name="main_mid_commit">Commit</string>
    <string name="main_right_lower">Options</string>
    <string name="main_right_upper">Cycle Mode</string>
    <string name="ok">OK</string>
    <string name="pref_backup_noext">Error: No external storage available for backup. Backup will not continue.</string>
    <string name="pref_backup_title">Backup IME database</string>
    <string name="pref_backup_warn">Warning: An existing database backup exists. Do you wish to overwrite?</string>
    <string name="pref_backupdict">Backup dictionary</string>
    <string name="pref_help">Show help</string>
    <string name="pref_inputmode">Default Input Mode</string>
    <string name="pref_inputmode_desc">"Default mode used for 'normal' text entry"</string>
    <string name="pref_lang_title">Multilingual support…</string>
    <string name="pref_load_title">Load IME dictionary</string>
    <string name="pref_loaddict">Load dictionary</string>
    <string name="pref_loadingbackup">Restoring dictionary…</string>
    <string name="pref_loadingdict">Loading dictionary…</string>
    <string name="pref_loadinguserdict">Loading user dictionary…</string>
    <string name="pref_loaduser_notfound">Dictionary for %1$s not found. Not loading.</string>
    <string name="pref_loaduserdict">Load user dictionary</string>
    <string name="pref_loaduserdictdesc">SDcard/traditionalt9/user.lang.dict (lang: en/ru)</string>
    <string name="pref_mode_notify">Mode notifications</string>
    <string name="pref_mode_notify_subtitle">Used for vocalization of mode changes</string>
    <string name="pref_nuke_title">Nuke IME dictionary</string>
    <string name="pref_nuke_warn">Warning: This will delete your entire dictionary. Do you wish to continue?</string>
    <string name="pref_nukedict">Nuke dictionary</string>
    <string name="pref_nukingdict">Nuking dictionary… Please wait…</string>
    <string name="pref_querytest">Query test</string>
    <string name="pref_restore_noext">Error: No external storage available for restoring. Restore will not continue.</string>
    <string name="pref_restore_nofile">Error: Backup file not found.</string>
    <string name="pref_restore_title">Restore IME database</string>
    <string name="pref_restore_warn">Backup database entries will overwrite existing database entries. Entries not in the backup will be retained. If that is not desired behaviour select \"%1$s\" before selecting this option.</string>
    <string name="pref_restoredict">Restore dictionary</string>
    <string name="pref_savingbackup">Backing up dictionary…</string>
    <string name="pref_testfunc">Test func</string>
    <string name="ricon_desc">Hold Icon</string>
    <string name="smiley_insert">Insert Smiley</string>
    <string name="symbol_insert">Insert Symbol</string>
    <string name="symbol_next">Next Page</string>
    <string name="symbol_page">Page: %1$s/%2$s</string>
    <string name="symbol_prev">Prev Page</string>
    <string name="title_activity_add_word">Add Word</string>
    <string name="traditionalt9_settings">Traditional T9 Settings</string>
    <string name="updating_database">Updating dictionary database, this might take a while.</string>
    <string name="updating_database_done">Completed updating dictionary database.</string>
    <string name="updating_database_title">Updating dictionary database…</string>
    <string name="updating_database_unavailable">Updating dictionary database, word input unavailable at this time.</string>
</resources>
